--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -196,3 +196,10 @@ html.dark-mode .calculator-results-table tr:hover td {
 }
 
 
+
+
+/* Ensure main navigation link color is overridden in dark mode */
+html.dark-mode header nav.main-nav ul li a {
+    color: var(--text-color);
+}
+
